--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -1,5 +1,43 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"step1: import the necessary library'\\nstep2: read the dataset\\nstep3: sanity check of data\\nstep4: exploratory data analysis\\nstep5: missing values treatment\\nstep6: outliers treatment\\nstep7: duplicates and garbage value treatments\\nstep8: normalization\\nstep9: encoding of data\\n\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#steps of preprocessing data\n",
+    "'''step1: import the necessary library'\n",
+    "step2: read the dataset\n",
+    "step3: sanity check of data\n",
+    "step4: exploratory data analysis\n",
+    "step5: missing values treatment\n",
+    "step6: outliers treatment\n",
+    "step7: duplicates and garbage value treatments\n",
+    "step8: normalization\n",
+    "step9: encoding of data\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -20,5 +58,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
