--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "\"step1: import the necessary library'\\nstep2: read the dataset\\nstep3: sanity check of data\\nstep4: exploratory data analysis\\nstep5: missing values treatment\\nstep6: outliers treatment\\nstep7: duplicates and garbage value treatments\\nstep8: normalization\\nstep9: encoding of data\\n\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,6 +28,31 @@
     "step8: normalization\n",
     "step9: encoding of data\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step1: Importing the necessary libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step2: Reading the dataset"
    ]
   },
   {
