--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -511,10 +511,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2938, 22)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#shape of the data will give the number of rows and columns in the form of tuple\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of           Country  Year      Status  Life expectancy   Adult Mortality  \\\n",
+       "0     Afghanistan  2015  Developing              65.0            263.0   \n",
+       "1     Afghanistan  2014  Developing              59.9            271.0   \n",
+       "2     Afghanistan  2013  Developing              59.9            268.0   \n",
+       "3     Afghanistan  2012  Developing              59.5            272.0   \n",
+       "4     Afghanistan  2011  Developing              59.2            275.0   \n",
+       "...           ...   ...         ...               ...              ...   \n",
+       "2933     Zimbabwe  2004  Developing              44.3            723.0   \n",
+       "2934     Zimbabwe  2003  Developing              44.5            715.0   \n",
+       "2935     Zimbabwe  2002  Developing              44.8             73.0   \n",
+       "2936     Zimbabwe  2001  Developing              45.3            686.0   \n",
+       "2937     Zimbabwe  2000  Developing              46.0            665.0   \n",
+       "\n",
+       "      infant deaths  Alcohol  percentage expenditure  Hepatitis B  Measles   \\\n",
+       "0                62     0.01               71.279624         65.0      1154   \n",
+       "1                64     0.01               73.523582         62.0       492   \n",
+       "2                66     0.01               73.219243         64.0       430   \n",
+       "3                69     0.01               78.184215         67.0      2787   \n",
+       "4                71     0.01                7.097109         68.0      3013   \n",
+       "...             ...      ...                     ...          ...       ...   \n",
+       "2933             27     4.36                0.000000         68.0        31   \n",
+       "2934             26     4.06                0.000000          7.0       998   \n",
+       "2935             25     4.43                0.000000         73.0       304   \n",
+       "2936             25     1.72                0.000000         76.0       529   \n",
+       "2937             24     1.68                0.000000         79.0      1483   \n",
+       "\n",
+       "      ...  Polio  Total expenditure  Diphtheria    HIV/AIDS         GDP  \\\n",
+       "0     ...    6.0               8.16         65.0        0.1  584.259210   \n",
+       "1     ...   58.0               8.18         62.0        0.1  612.696514   \n",
+       "2     ...   62.0               8.13         64.0        0.1  631.744976   \n",
+       "3     ...   67.0               8.52         67.0        0.1  669.959000   \n",
+       "4     ...   68.0               7.87         68.0        0.1   63.537231   \n",
+       "...   ...    ...                ...          ...        ...         ...   \n",
+       "2933  ...   67.0               7.13         65.0       33.6  454.366654   \n",
+       "2934  ...    7.0               6.52         68.0       36.7  453.351155   \n",
+       "2935  ...   73.0               6.53         71.0       39.8   57.348340   \n",
+       "2936  ...   76.0               6.16         75.0       42.1  548.587312   \n",
+       "2937  ...   78.0               7.10         78.0       43.5  547.358878   \n",
+       "\n",
+       "      Population   thinness  1-19 years   thinness 5-9 years  \\\n",
+       "0     33736494.0                   17.2                 17.3   \n",
+       "1       327582.0                   17.5                 17.5   \n",
+       "2     31731688.0                   17.7                 17.7   \n",
+       "3      3696958.0                   17.9                 18.0   \n",
+       "4      2978599.0                   18.2                 18.2   \n",
+       "...          ...                    ...                  ...   \n",
+       "2933  12777511.0                    9.4                  9.4   \n",
+       "2934  12633897.0                    9.8                  9.9   \n",
+       "2935    125525.0                    1.2                  1.3   \n",
+       "2936  12366165.0                    1.6                  1.7   \n",
+       "2937  12222251.0                   11.0                 11.2   \n",
+       "\n",
+       "      Income composition of resources  Schooling  \n",
+       "0                               0.479       10.1  \n",
+       "1                               0.476       10.0  \n",
+       "2                               0.470        9.9  \n",
+       "3                               0.463        9.8  \n",
+       "4                               0.454        9.5  \n",
+       "...                               ...        ...  \n",
+       "2933                            0.407        9.2  \n",
+       "2934                            0.418        9.5  \n",
+       "2935                            0.427       10.0  \n",
+       "2936                            0.427        9.8  \n",
+       "2937                            0.434        9.8  \n",
+       "\n",
+       "[2938 rows x 22 columns]>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.info\n",
+    "#this will give the info of the table such as datatypes of the columns and etc.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                              0\n",
+       "Year                                 0\n",
+       "Status                               0\n",
+       "Life expectancy                     10\n",
+       "Adult Mortality                     10\n",
+       "infant deaths                        0\n",
+       "Alcohol                            194\n",
+       "percentage expenditure               0\n",
+       "Hepatitis B                        553\n",
+       "Measles                              0\n",
+       " BMI                                34\n",
+       "under-five deaths                    0\n",
+       "Polio                               19\n",
+       "Total expenditure                  226\n",
+       "Diphtheria                          19\n",
+       " HIV/AIDS                            0\n",
+       "GDP                                448\n",
+       "Population                         652\n",
+       " thinness  1-19 years               34\n",
+       " thinness 5-9 years                 34\n",
+       "Income composition of resources    167\n",
+       "Schooling                          163\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#finding the missing values in the dataframe\n",
+    "df.isnull().sum()\n",
+    "#this code gives the total number of missing values in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                             0.000000\n",
+       "Year                                0.000000\n",
+       "Status                              0.000000\n",
+       "Life expectancy                     0.340368\n",
+       "Adult Mortality                     0.340368\n",
+       "infant deaths                       0.000000\n",
+       "Alcohol                             6.603131\n",
+       "percentage expenditure              0.000000\n",
+       "Hepatitis B                        18.822328\n",
+       "Measles                             0.000000\n",
+       " BMI                                1.157250\n",
+       "under-five deaths                   0.000000\n",
+       "Polio                               0.646698\n",
+       "Total expenditure                   7.692308\n",
+       "Diphtheria                          0.646698\n",
+       " HIV/AIDS                           0.000000\n",
+       "GDP                                15.248468\n",
+       "Population                         22.191967\n",
+       " thinness  1-19 years               1.157250\n",
+       " thinness 5-9 years                 1.157250\n",
+       "Income composition of resources     5.684139\n",
+       "Schooling                           5.547992\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to find the percentage of missing values in the columns, the below code can be executed.\n",
+    "df.isnull().sum()/df.shape[0]*100"
+   ]
   }
  ],
  "metadata": {
