--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -702,6 +702,65 @@
     "#to find the percentage of missing values in the columns, the below code can be executed.\n",
     "df.isnull().sum()/df.shape[0]*100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to find the duplicates/number of values duplicated\n",
+    "df.duplicated().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "Afghanistan              16\n",
+      "Albania                  16\n",
+      "Algeria                  16\n",
+      "Angola                   16\n",
+      "Antigua and Barbuda      16\n",
+      "                         ..\n",
+      "Monaco                    1\n",
+      "Marshall Islands          1\n",
+      "Saint Kitts and Nevis     1\n",
+      "San Marino                1\n",
+      "Tuvalu                    1\n",
+      "Name: count, Length: 193, dtype: int64\n",
+      "******************************\n",
+      "Status\n",
+      "Developing    2426\n",
+      "Developed      512\n",
+      "Name: count, dtype: int64\n",
+      "******************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "#identifying the garbage values\n",
+    "for i in df.select_dtypes(include=\"object\").columns:\n",
+    "    print(df[i].value_counts())\n",
+    "    print(\"***\"*10)"
+   ]
   }
  ],
  "metadata": {
