--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "\"step1: import the necessary library'\\nstep2: read the dataset\\nstep3: sanity check of data\\nstep4: exploratory data analysis\\nstep5: missing values treatment\\nstep6: outliers treatment\\nstep7: duplicates and garbage value treatments\\nstep8: normalization\\nstep9: encoding of data\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "(2938, 22)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "[2938 rows x 22 columns]>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -761,6 +761,402 @@
     "    print(df[i].value_counts())\n",
     "    print(\"***\"*10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step4: Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Life expectancy</th>\n",
+       "      <th>Adult Mortality</th>\n",
+       "      <th>infant deaths</th>\n",
+       "      <th>Alcohol</th>\n",
+       "      <th>percentage expenditure</th>\n",
+       "      <th>Hepatitis B</th>\n",
+       "      <th>Measles</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>under-five deaths</th>\n",
+       "      <th>Polio</th>\n",
+       "      <th>Total expenditure</th>\n",
+       "      <th>Diphtheria</th>\n",
+       "      <th>HIV/AIDS</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>thinness  1-19 years</th>\n",
+       "      <th>thinness 5-9 years</th>\n",
+       "      <th>Income composition of resources</th>\n",
+       "      <th>Schooling</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2928.000000</td>\n",
+       "      <td>2928.000000</td>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2744.000000</td>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2385.000000</td>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2904.000000</td>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2919.000000</td>\n",
+       "      <td>2712.00000</td>\n",
+       "      <td>2919.000000</td>\n",
+       "      <td>2938.000000</td>\n",
+       "      <td>2490.000000</td>\n",
+       "      <td>2.286000e+03</td>\n",
+       "      <td>2904.000000</td>\n",
+       "      <td>2904.000000</td>\n",
+       "      <td>2771.000000</td>\n",
+       "      <td>2775.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2007.518720</td>\n",
+       "      <td>69.224932</td>\n",
+       "      <td>164.796448</td>\n",
+       "      <td>30.303948</td>\n",
+       "      <td>4.602861</td>\n",
+       "      <td>738.251295</td>\n",
+       "      <td>80.940461</td>\n",
+       "      <td>2419.592240</td>\n",
+       "      <td>38.321247</td>\n",
+       "      <td>42.035739</td>\n",
+       "      <td>82.550188</td>\n",
+       "      <td>5.93819</td>\n",
+       "      <td>82.324084</td>\n",
+       "      <td>1.742103</td>\n",
+       "      <td>7483.158469</td>\n",
+       "      <td>1.275338e+07</td>\n",
+       "      <td>4.839704</td>\n",
+       "      <td>4.870317</td>\n",
+       "      <td>0.627551</td>\n",
+       "      <td>11.992793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.613841</td>\n",
+       "      <td>9.523867</td>\n",
+       "      <td>124.292079</td>\n",
+       "      <td>117.926501</td>\n",
+       "      <td>4.052413</td>\n",
+       "      <td>1987.914858</td>\n",
+       "      <td>25.070016</td>\n",
+       "      <td>11467.272489</td>\n",
+       "      <td>20.044034</td>\n",
+       "      <td>160.445548</td>\n",
+       "      <td>23.428046</td>\n",
+       "      <td>2.49832</td>\n",
+       "      <td>23.716912</td>\n",
+       "      <td>5.077785</td>\n",
+       "      <td>14270.169342</td>\n",
+       "      <td>6.101210e+07</td>\n",
+       "      <td>4.420195</td>\n",
+       "      <td>4.508882</td>\n",
+       "      <td>0.210904</td>\n",
+       "      <td>3.358920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>36.300000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.37000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>1.681350</td>\n",
+       "      <td>3.400000e+01</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>63.100000</td>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.877500</td>\n",
+       "      <td>4.685343</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.300000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>4.26000</td>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>463.935626</td>\n",
+       "      <td>1.957932e+05</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>0.493000</td>\n",
+       "      <td>10.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2008.000000</td>\n",
+       "      <td>72.100000</td>\n",
+       "      <td>144.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.755000</td>\n",
+       "      <td>64.912906</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>43.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>5.75500</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>1766.947595</td>\n",
+       "      <td>1.386542e+06</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>0.677000</td>\n",
+       "      <td>12.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>75.700000</td>\n",
+       "      <td>228.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>7.702500</td>\n",
+       "      <td>441.534144</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>360.250000</td>\n",
+       "      <td>56.200000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>7.49250</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>5910.806335</td>\n",
+       "      <td>7.420359e+06</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>0.779000</td>\n",
+       "      <td>14.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>723.000000</td>\n",
+       "      <td>1800.000000</td>\n",
+       "      <td>17.870000</td>\n",
+       "      <td>19479.911610</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>212183.000000</td>\n",
+       "      <td>87.300000</td>\n",
+       "      <td>2500.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>17.60000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>50.600000</td>\n",
+       "      <td>119172.741800</td>\n",
+       "      <td>1.293859e+09</td>\n",
+       "      <td>27.700000</td>\n",
+       "      <td>28.600000</td>\n",
+       "      <td>0.948000</td>\n",
+       "      <td>20.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Year  Life expectancy   Adult Mortality  infant deaths  \\\n",
+       "count  2938.000000       2928.000000      2928.000000    2938.000000   \n",
+       "mean   2007.518720         69.224932       164.796448      30.303948   \n",
+       "std       4.613841          9.523867       124.292079     117.926501   \n",
+       "min    2000.000000         36.300000         1.000000       0.000000   \n",
+       "25%    2004.000000         63.100000        74.000000       0.000000   \n",
+       "50%    2008.000000         72.100000       144.000000       3.000000   \n",
+       "75%    2012.000000         75.700000       228.000000      22.000000   \n",
+       "max    2015.000000         89.000000       723.000000    1800.000000   \n",
+       "\n",
+       "           Alcohol  percentage expenditure  Hepatitis B       Measles   \\\n",
+       "count  2744.000000             2938.000000  2385.000000    2938.000000   \n",
+       "mean      4.602861              738.251295    80.940461    2419.592240   \n",
+       "std       4.052413             1987.914858    25.070016   11467.272489   \n",
+       "min       0.010000                0.000000     1.000000       0.000000   \n",
+       "25%       0.877500                4.685343    77.000000       0.000000   \n",
+       "50%       3.755000               64.912906    92.000000      17.000000   \n",
+       "75%       7.702500              441.534144    97.000000     360.250000   \n",
+       "max      17.870000            19479.911610    99.000000  212183.000000   \n",
+       "\n",
+       "              BMI   under-five deaths         Polio  Total expenditure  \\\n",
+       "count  2904.000000         2938.000000  2919.000000         2712.00000   \n",
+       "mean     38.321247           42.035739    82.550188            5.93819   \n",
+       "std      20.044034          160.445548    23.428046            2.49832   \n",
+       "min       1.000000            0.000000     3.000000            0.37000   \n",
+       "25%      19.300000            0.000000    78.000000            4.26000   \n",
+       "50%      43.500000            4.000000    93.000000            5.75500   \n",
+       "75%      56.200000           28.000000    97.000000            7.49250   \n",
+       "max      87.300000         2500.000000    99.000000           17.60000   \n",
+       "\n",
+       "       Diphtheria      HIV/AIDS            GDP    Population  \\\n",
+       "count  2919.000000  2938.000000    2490.000000  2.286000e+03   \n",
+       "mean     82.324084     1.742103    7483.158469  1.275338e+07   \n",
+       "std      23.716912     5.077785   14270.169342  6.101210e+07   \n",
+       "min       2.000000     0.100000       1.681350  3.400000e+01   \n",
+       "25%      78.000000     0.100000     463.935626  1.957932e+05   \n",
+       "50%      93.000000     0.100000    1766.947595  1.386542e+06   \n",
+       "75%      97.000000     0.800000    5910.806335  7.420359e+06   \n",
+       "max      99.000000    50.600000  119172.741800  1.293859e+09   \n",
+       "\n",
+       "        thinness  1-19 years   thinness 5-9 years  \\\n",
+       "count            2904.000000          2904.000000   \n",
+       "mean                4.839704             4.870317   \n",
+       "std                 4.420195             4.508882   \n",
+       "min                 0.100000             0.100000   \n",
+       "25%                 1.600000             1.500000   \n",
+       "50%                 3.300000             3.300000   \n",
+       "75%                 7.200000             7.200000   \n",
+       "max                27.700000            28.600000   \n",
+       "\n",
+       "       Income composition of resources    Schooling  \n",
+       "count                      2771.000000  2775.000000  \n",
+       "mean                          0.627551    11.992793  \n",
+       "std                           0.210904     3.358920  \n",
+       "min                           0.000000     0.000000  \n",
+       "25%                           0.493000    10.100000  \n",
+       "50%                           0.677000    12.300000  \n",
+       "75%                           0.779000    14.300000  \n",
+       "max                           0.948000    20.700000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df.describe()\n",
+    "#this will describe the whole data from the csv file with basic parameters such as mean, count, max, std-standard devation, 25th percentile, 50th percentile and 75th percentile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2938</td>\n",
+       "      <td>2938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Country      Status\n",
+       "count          2938        2938\n",
+       "unique          193           2\n",
+       "top     Afghanistan  Developing\n",
+       "freq             16        2426"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include=\"object\")\n",
+    "#another descriptive analysis of the data for which the columns contain all values without any empty values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
